# rose-bitmap

./: CMakeLists.txt  README.md  conanfile.py
include/rose/: bitmap.hpp
test/: bitmap_test.cpp
test_package/: conanfile.py  test_package.cpp
